fix1.2.9: modal z-index

--- a/modalz/index.scss
+++ b/modalz/index.scss
@@ -1,6 +1,6 @@
 #modalz {
     position: fixed;
-    z-index: 9999;
+    z-index: 100000;
     top: 0;
     width: 100%;
     height: 100vh;
@@ -14,7 +14,7 @@
 
     &-btn {
         position: absolute;
-        z-index: 10001;
+        z-index: 10002;
         top: 16px;
         right: 16px;
         width: 40px;
@@ -46,7 +46,7 @@
 
     &-bg {
         position: absolute;
-        z-index: 9999;
+        z-index: 100001;
         top: 0;
         left: 0;
         right: 0;
@@ -58,6 +58,7 @@
 
     &-content {
         position: relative;
+        z-index: 100003;
         max-height: 100vh;
         max-width: 100%;
     }
